--- a/news/app/src/main/res/values/dimens.xml
+++ b/news/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="content_padding">8dp</dimen>
+    <dimen name="bottombar_height">48dp</dimen>
 
 </resources>
