--- a/news/app/src/main/res/layout/fragment_first.xml
+++ b/news/app/src/main/res/layout/fragment_first.xml
@@ -5,9 +5,12 @@
     tools:context="com.tb.wangfang.news.ui.fragment.FirstFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <com.youth.banner.Banner xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="1" />
+        android:background="#8749"
+        android:layout_height="100dp" />
+
 
 </FrameLayout>
