--- a/news/app/src/main/res/layout/fragment_first.xml
+++ b/news/app/src/main/res/layout/fragment_first.xml
@@ -1,7 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.tb.wangfang.news.ui.fragment.FirstFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -9,8 +10,12 @@
     <com.youth.banner.Banner xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:background="#8749"
-        android:layout_height="100dp" />
+        android:layout_height="100dp"
+        android:background="#8749" />
 
+    <com.github.barteksc.pdfviewer.PDFView
+        android:id="@+id/pdfView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-</FrameLayout>
+</LinearLayout>
