--- a/news/app/src/main/res/values-w820dp/dimens.xml
+++ b/news/app/src/main/res/values-w820dp/dimens.xml
@@ -1,3 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?><resources>    <dimen name="content_padding">20.48dp</dimen>
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <dimen name="content_padding">20.48dp</dimen>
     <dimen name="bottombar_height">122.88dp</dimen>
+    <!-- Example customization of dimensions originally defined in res/values/dimens.xml
+         (such as screen margins) for screens with more than 820dp of available width. This
+         would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
+    <dimen name="activity_horizontal_margin">64dp</dimen>
 </resources>
