--- a/news/app/src/main/res/layout/fragment_fourth.xml
+++ b/news/app/src/main/res/layout/fragment_fourth.xml
@@ -11,5 +11,12 @@
         android:gravity="center"
         android:textSize="16sp"
         android:text="我的" />
-
+    <EditText
+        android:id="@+id/btn_delete_history"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:text="删除" />
 </FrameLayout>
