--- a/news/app/src/main/res/layout/fragment_second.xml
+++ b/news/app/src/main/res/layout/fragment_second.xml
@@ -31,10 +31,8 @@
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:singleLine="true"
-
             android:textColorHint="@color/text_hint"
             android:textSize="16sp" />
-
         <Button
             android:id="@+id/btn_confirm"
             android:layout_width="wrap_content"
@@ -44,55 +42,37 @@
             android:text="确定" />
     </RelativeLayout>
 
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
 
-        <RelativeLayout
-            android:id="@+id/rl_history_content"
+        >
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="检索历史"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_history"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_below="@id/tv_title"></android.support.v7.widget.RecyclerView>
 
-            android:background="@color/yellow">
-
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:text="检索历史"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_history"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@id/tv_title"></android.support.v7.widget.RecyclerView>
-
-            <Button
-                android:id="@+id/btn_delete_history"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="20dp"
-                android:text="删除" />
-        </RelativeLayout>
-
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipeLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:visibility="gone">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_content"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
-        </android.support.v4.widget.SwipeRefreshLayout>
+        <EditText
+            android:id="@+id/btn_delete_history"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"
+            android:text="删除" />
     </RelativeLayout>
 
 
