--- a/news/app/src/main/res/layout/activity_filter_doc.xml
+++ b/news/app/src/main/res/layout/activity_filter_doc.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context=".ui.activity.FilterDocActivity">
     <!--Toolbar-->
@@ -60,7 +61,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="end"
-            android:background="#fff">
+            android:background="#000"
+            android:orientation="vertical">
+
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="筛选"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/lv_right_menu"
