--- a/news/app/src/main/res/layout/fragment_second.xml
+++ b/news/app/src/main/res/layout/fragment_second.xml
@@ -33,6 +33,7 @@
             android:singleLine="true"
             android:textColorHint="@color/text_hint"
             android:textSize="16sp" />
+
         <Button
             android:id="@+id/btn_confirm"
             android:layout_width="wrap_content"
@@ -65,7 +66,7 @@
             android:layout_height="match_parent"
             android:layout_below="@id/tv_title"></android.support.v7.widget.RecyclerView>
 
-        <EditText
+        <Button
             android:id="@+id/btn_delete_history"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
