--- a/news/app/src/main/res/layout/activity_filter_doc.xml
+++ b/news/app/src/main/res/layout/activity_filter_doc.xml
@@ -42,7 +42,38 @@
         <!--主布局-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:orientation="horizontal">
+
+                <com.jaredrummler.materialspinner.MaterialSpinner
+                    android:id="@+id/ms_selet_one"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:drawableRight="@drawable/keyb_top"
+                    android:text="主题"></com.jaredrummler.materialspinner.MaterialSpinner>
+
+                <com.jaredrummler.materialspinner.MaterialSpinner
+                    android:id="@+id/ms_selet_two"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:drawableRight="@drawable/keyb_top"
+                    android:text="相关度"></com.jaredrummler.materialspinner.MaterialSpinner>
+
+                <com.jaredrummler.materialspinner.MaterialSpinner
+                    android:id="@+id/ms_selet_three"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:drawableRight="@drawable/keyb_top"
+                    android:text="文件类型"></com.jaredrummler.materialspinner.MaterialSpinner>
+            </LinearLayout>
 
             <android.support.v4.widget.SwipeRefreshLayout
                 android:id="@+id/swipeLayout"
@@ -55,10 +86,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
             </android.support.v4.widget.SwipeRefreshLayout>
-        </LinearLayout>
-        <!--侧滑菜单-->
+        </LinearLayout><!--侧滑菜单-->
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="match_parent"
             android:layout_gravity="end"
             android:background="#000"
