--- a/news/app/src/main/res/layout/activity_main.xml
+++ b/news/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:id="@+id/ll_bottom_tab"
         android:layout_width="0dp"
-        android:layout_height="54dp"
+        android:layout_height="44dp"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -31,9 +31,10 @@
         <TextView
             android:id="@+id/tv_home"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:layout_weight="1"
+            android:background="@drawable/ripple_white_bg"
             android:gravity="center"
             android:text="首页"
             android:textColor="@color/colorPrimaryDark"
@@ -43,9 +44,10 @@
         <TextView
             android:id="@+id/tv_find"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:layout_weight="1"
+            android:background="@drawable/ripple_white_bg"
             android:gravity="center"
             android:text="发现"
             android:textColor="@color/colorPrimaryDark"
@@ -55,9 +57,10 @@
         <TextView
             android:id="@+id/tv_focus"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:layout_weight="1"
+            android:background="@drawable/ripple_white_bg"
             android:gravity="center"
             android:text="关注"
             android:textColor="@color/colorPrimaryDark"
@@ -66,9 +69,10 @@
         <TextView
             android:id="@+id/tv_me"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:layout_weight="1"
+            android:background="@drawable/ripple_white_bg"
             android:gravity="center"
             android:text="我的"
             android:textColor="@color/colorPrimaryDark"
