--- a/news/app/src/main/res/layout/fragment_third.xml
+++ b/news/app/src/main/res/layout/fragment_third.xml
@@ -1,7 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.tb.wangfang.news.ui.fragment.FirstFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -9,12 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:gravity="center"
-        android:textSize="16sp"
-        android:text="关注" />
+        android:text="关注"
+        android:textSize="16sp" />
+
     <Button
         android:id="@+id/btn_down"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="下载文件" />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/iv_test"
+        android:layout_width="match_parent"
+        android:layout_height="55dp" />
+</LinearLayout>
