--- a/news/app/src/main/res/layout/activity_image_browse.xml
+++ b/news/app/src/main/res/layout/activity_image_browse.xml
@@ -6,9 +6,9 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager1"
         android:layout_width="match_parent"
-        android:transitionName="image"
         android:layout_height="match_parent"
-        android:background="@color/black_text"></android.support.v4.view.ViewPager>
+        android:background="@color/black_text"
+        android:transitionName="image"></android.support.v4.view.ViewPager>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -21,6 +21,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="36dp"
+
             android:orientation="horizontal"></LinearLayout>
     </RelativeLayout>
 </FrameLayout>
