--- a/news/app/src/main/res/layout/item_main_head.xml
+++ b/news/app/src/main/res/layout/item_main_head.xml
@@ -5,13 +5,33 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.youth.banner.Banner
-        android:id="@+id/banner"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="#8749"
-        app:indicator_height="4dp"
-        app:indicator_width="18dp" />
+        android:background="#8749">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/banner"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/black_text"
+            android:transitionName="image"></android.support.v4.view.ViewPager>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/tipsBox"
+                android:layout_width="18dp"
+                android:layout_height="4dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="16dp"
+                android:orientation="horizontal"
+                android:padding="10dp"></LinearLayout>
+        </RelativeLayout>
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
