--- a/news/app/src/main/res/layout/activity_mian_search.xml
+++ b/news/app/src/main/res/layout/activity_mian_search.xml
@@ -33,7 +33,8 @@
                 android:gravity="center_vertical"
                 android:imeOptions="actionSearch"
                 android:maxLines="1"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/tv_cancel"
