--- a/news/app/src/main/res/layout/fragment_fourth.xml
+++ b/news/app/src/main/res/layout/fragment_fourth.xml
@@ -54,7 +54,7 @@
                 android:paddingBottom="7.5dp"
                 android:text="登录体验更多功能"
                 android:textColor="#333"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -63,12 +63,15 @@
                 android:layout_height="wrap_content"
                 android:text="查看或编辑个人主页"
                 android:textColor="#666"
-                android:textSize="16sp" />
+                android:textSize="12sp"
+               />
 
             <TextView
                 android:id="@+id/tv_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:textSize="12sp"
                 android:background="@mipmap/register_button"
                 android:textColor="#417dc9" />
 
@@ -99,7 +102,7 @@
             android:gravity="center_vertical"
             android:text="我的收藏"
             android:textColor="#333"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -127,13 +130,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="14dp"
             android:drawableLeft="@mipmap/my_order_icon"
             android:drawablePadding="16dp"
             android:gravity="center_vertical"
             android:text="我的订单"
             android:textColor="#333"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -162,13 +165,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="14dp"
             android:drawableLeft="@mipmap/help_icon"
             android:drawablePadding="16dp"
             android:gravity="center_vertical"
             android:text="帮助"
             android:textColor="#333"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -202,11 +205,11 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="14dp"
             android:drawableLeft="@mipmap/setting_icon"
-            android:drawablePadding="16dp"
+            android:drawablePadding="14dp"
             android:gravity="center_vertical"
             android:text="设置"
             android:textColor="#333"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
         <ImageView
             android:layout_width="wrap_content"
