--- a/news/app/src/main/res/layout/item_filter_level1.xml
+++ b/news/app/src/main/res/layout/item_filter_level1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -9,11 +9,10 @@
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:layout_centerInParent="true"
         android:gravity="center"
         android:text="数学"
         android:textColor="@color/black_text"
         android:textSize="16sp" />
-</LinearLayout>
+</RelativeLayout>
