--- a/news/app/src/main/res/layout/item_main_head.xml
+++ b/news/app/src/main/res/layout/item_main_head.xml
@@ -9,9 +9,9 @@
         android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        app:indicator_width="18dp"
+        android:background="#8749"
         app:indicator_height="4dp"
-        android:background="#8749" />
+        app:indicator_width="18dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
             android:drawableTop="@mipmap/hot_icon"
             android:gravity="center"
             android:paddingTop="15dp"
-            android:text="热点"
+            android:text="专题聚焦"
             android:textColor="@color/text_table"
             android:textSize="12sp" />
 
@@ -44,7 +44,7 @@
             android:drawableTop="@mipmap/quick_see"
             android:gravity="center"
             android:paddingTop="15dp"
-            android:text="快看"
+            android:text="科技动态"
             android:textColor="@color/text_table"
             android:textSize="12sp" />
 
@@ -59,7 +59,7 @@
             android:drawableTop="@mipmap/you_love_icon"
             android:gravity="center"
             android:paddingTop="15dp"
-            android:text="猜你喜欢"
+            android:text="会议信息"
             android:textColor="@color/text_table"
             android:textSize="12sp" />
 
@@ -74,7 +74,7 @@
             android:drawableTop="@mipmap/more_news"
             android:gravity="center"
             android:paddingTop="15dp"
-            android:text="更多"
+            android:text="期刊"
             android:textColor="@color/text_table"
             android:textSize="12sp" />
     </LinearLayout>
