--- a/news/app/src/main/res/layout/item_year_condition.xml
+++ b/news/app/src/main/res/layout/item_year_condition.xml
@@ -1,259 +1,226 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <RelativeLayout
-        android:id="@+id/rl_year_condition"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/divide"
+    android:orientation="vertical">
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginBottom="0.5dp"
-        android:background="@color/white"
-        android:orientation="vertical">
+        android:layout_height="35dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp">
 
-        <TextView
-            android:id="@+id/tv_year_conditiom"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="20dp"
-            android:gravity="center_vertical"
-            android:text="数学"
-            android:textColor="@color/black_text"
-            android:textSize="16sp" />
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:elevation="2dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="13dp"
+            android:paddingRight="13dp"
+            android:paddingTop="5dp">
 
-        <ImageView
-            android:id="@+id/iv_arraw"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
-            android:padding="5dp"
-            android:src="@mipmap/step_arrow_icon" />
-    </RelativeLayout>
+            <EditText
+                android:id="@+id/et_start_time"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_marginRight="30dp"
+                android:background="@null"
+                android:gravity="center_vertical"
+                android:inputType="number" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:text="年"
+                android:textColor="@color/gray_text_6"
+                android:textSize="12sp" />
+        </RelativeLayout>
+
+        <View
+            android:layout_width="12dp"
+            android:layout_height="2dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:background="#FFCBCBCB" />
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:elevation="2dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="13dp"
+            android:paddingRight="13dp"
+            android:paddingTop="5dp">
+
+            <EditText
+                android:id="@+id/et_start_end"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_marginRight="30dp"
+                android:background="@null"
+                android:gravity="center_vertical"
+                android:inputType="number" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:text="年"
+                android:textColor="@color/gray_text_6"
+                android:textSize="12sp" />
+        </RelativeLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/divide"
-        android:orientation="vertical">
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginLeft="20dp"
+        <RelativeLayout
+            android:id="@+id/rl_last_one_year"
+            android:layout_width="0dp"
+            android:layout_height="62.5dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp">
+            android:layout_weight="1"
+            android:background="@drawable/white_corners_solide">
 
-            <RelativeLayout
-                android:layout_width="0dp"
+            <TextView
+                android:id="@+id/tv_period_one"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/white"
-                android:elevation="2dp"
-                android:paddingBottom="5dp"
-                android:paddingLeft="13dp"
-                android:paddingRight="13dp"
-                android:paddingTop="5dp">
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="15dp"
+                android:text="2016-2017"
+                android:textColor="@color/gray_text_6"
+                android:textSize="12sp" />
 
-                <EditText
-                    android:id="@+id/et_start_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:layout_marginRight="30dp"
-                    android:background="@null"
-
-                    android:gravity="center_vertical" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:text="年"
-                    android:textColor="@color/gray_text_6"
-                    android:textSize="12sp" />
-            </RelativeLayout>
-
-            <View
-                android:layout_width="12dp"
-                android:layout_height="2dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:background="#FFCBCBCB" />
-
-            <RelativeLayout
-                android:layout_width="0dp"
+            <TextView
+                android:id="@+id/tv_last_period_one"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/white"
-                android:elevation="2dp"
-                android:paddingBottom="5dp"
-                android:paddingLeft="13dp"
-                android:paddingRight="13dp"
-                android:paddingTop="5dp">
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
+                android:text="近一年"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="12sp" />
 
-                <EditText
-                    android:id="@+id/et_start_end"
-                    android:layout_width="match_parent"
-                    android:layout_height="35dp"
-                    android:layout_marginRight="30dp"
-                    android:background="@null"
+        </RelativeLayout>
 
-                    android:gravity="center_vertical" />
+        <RelativeLayout
+            android:id="@+id/rl_last_three_year"
+            android:layout_width="0dp"
+            android:layout_height="62.5dp"
+            android:layout_weight="1"
+            android:background="@drawable/white_corners_solide">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:text="年"
-                    android:textColor="@color/gray_text_6"
-                    android:textSize="12sp" />
-            </RelativeLayout>
-        </LinearLayout>
+            <TextView
+                android:id="@+id/tv_period_three"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2016-2017"
+                android:textColor="@color/gray_text_6"
+                android:textSize="12sp"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            <TextView
+                android:id="@+id/tv_last_period_three"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
+                android:text="近三年"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="12sp" />
+
+        </RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp">
+
+        <RelativeLayout
+            android:id="@+id/rl_last_five_year"
+            android:layout_width="0dp"
+            android:layout_height="62.5dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp">
+            android:layout_weight="1"
+            android:background="@drawable/white_corners_solide">
 
-            <RelativeLayout
-                android:id="@+id/rl_last_one_year"
-                android:layout_width="0dp"
-                android:layout_height="62.5dp"
-                android:layout_marginRight="20dp"
-                android:layout_weight="1"
-                android:background="@drawable/white_corners_solide">
+            <TextView
+                android:id="@+id/tv_period_five"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="15dp"
+                android:text="2016-2017"
+                android:textColor="@color/gray_text_6"
+                android:textSize="12sp" />
 
-                <TextView
-                    android:id="@+id/tv_period_one"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="15dp"
-                    android:text="2016-2017"
-                    android:textColor="@color/gray_text_6"
-                    android:textSize="12sp" />
+            <TextView
+                android:id="@+id/tv_last_period_five"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
+                android:text="近五年"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="12sp" />
 
-                <TextView
-                    android:id="@+id/tv_last_period_one"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginTop="15dp"
-                    android:text="近一年"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="12sp" />
+        </RelativeLayout>
 
-            </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rl_last_all_year"
+            android:layout_width="0dp"
+            android:layout_height="62.5dp"
+            android:layout_weight="1"
+            android:background="@drawable/white_corners_solide">
 
-            <RelativeLayout
-                android:id="@+id/rl_last_three_year"
-                android:layout_width="0dp"
-                android:layout_height="62.5dp"
-                android:layout_weight="1"
-                android:background="@drawable/white_corners_solide">
+            <TextView
+                android:id="@+id/tv_period_all"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="15dp"
+                android:text="2016-2017"
+                android:textColor="@color/gray_text_6"
+                android:textSize="12sp" />
 
-                <TextView
-                    android:id="@+id/tv_period_three"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="15dp"
-                    android:text="2016-2017"
-                    android:textColor="@color/gray_text_6"
-                    android:textSize="12sp" />
+            <TextView
+                android:id="@+id/tv_last_period_all"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
+                android:text="全部"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="12sp" />
 
-                <TextView
-                    android:id="@+id/tv_last_period_three"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginTop="15dp"
-                    android:text="近三年"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="12sp" />
-
-            </RelativeLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp">
-
-            <RelativeLayout
-                android:id="@+id/rl_last_five_year"
-                android:layout_width="0dp"
-                android:layout_height="62.5dp"
-                android:layout_marginRight="20dp"
-                android:layout_weight="1"
-                android:background="@drawable/white_corners_solide">
-
-                <TextView
-                    android:id="@+id/tv_period_five"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="15dp"
-                    android:text="2016-2017"
-                    android:textColor="@color/gray_text_6"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/tv_last_period_five"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginTop="15dp"
-                    android:text="近五年"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="12sp" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/rl_last_all_year"
-                android:layout_width="0dp"
-                android:layout_height="62.5dp"
-                android:layout_weight="1"
-                android:background="@drawable/white_corners_solide">
-
-                <TextView
-                    android:id="@+id/tv_period_all"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="15dp"
-                    android:text="2016-2017"
-                    android:textColor="@color/gray_text_6"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/tv_last_period_all"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginTop="15dp"
-                    android:text="全部"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="12sp" />
-
-            </RelativeLayout>
-        </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
