--- a/news/app/src/main/res/layout/fragment_subscribe_key.xml
+++ b/news/app/src/main/res/layout/fragment_subscribe_key.xml
@@ -36,7 +36,7 @@
         android:background="@color/divide" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_"
+        android:id="@+id/rv_doc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
 
