--- a/news/app/src/main/res/layout/fragment_insert_keyword.xml
+++ b/news/app/src/main/res/layout/fragment_insert_keyword.xml
@@ -55,6 +55,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_source_type"
+        android:layout_marginTop="7.5dp"
+        android:layout_marginBottom="7.5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
 
