--- a/news/app/src/main/res/layout/item_subscribe_journal.xml
+++ b/news/app/src/main/res/layout/item_subscribe_journal.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="140dp">
 
     <ImageView
         android:id="@+id/iv_conver"
@@ -72,4 +72,10 @@
         android:text="2017年第15期"
         android:textColor="#999"
         android:textSize="12sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/divide" />
 </RelativeLayout>
